cmake_minimum_required(VERSION 3.17)
project(c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(c__
        Solution785.cpp
        Solution786.cpp
        Solution787.cpp
        Solution788.cpp
        Solution789.cpp
        Solution790.cpp
        Solution791.cpp
        Solution792.cpp
        Solution793.cpp
        Solution794.cpp
        Solution795.cpp
        Solution796.cpp
        Solution797.cpp
        Solution798.cpp
        Solution799.cpp
        Solution800.cpp
        Solution801.cpp
        Solution802.cpp
        Solution803.cpp)
